kubernetes/main/infrastructure/controllers/cilium/gateway/external-gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external-gateway
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/target: ingress.dcunha.io
spec:
  gatewayClassName: cilium
  listeners:
    # HTTP Listener for redirect
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.dcunha.io"
      allowedRoutes:
        namespaces:
          from: All

    # HTTPS Listener for TLS termination
    - name: https
      protocol: HTTPS
      hostname: "*.dcunha.io"
      port: 443
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: dcunha-io-tls
            kind: Secret

    # TCP Listeners for Minecraft
    - name: minecraft-tcp
      protocol: TCP
      port: 25565
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All

    - name: minecraft-rcon
      protocol: TCP
      port: 25575
      allowedRoutes:
        kinds:
          - kind: TCPRoute
        namespaces:
          from: All
